app/style.css
body {
    font-family: "Lato";
    color: #fff;
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center center;
    caret-color: #4285F4;
 }

 /* Flexbox */
#container {
    max-height: 98vh;
    height: 98vh;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}
#left {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}
#mid {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    max-width: 60vw;
}
#right {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}
#mid-main {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin-top: 15vh;
    text-align: center;
}

/* Global Classes */
.outlined {
    text-shadow: 0px 0px 3px black;
}

/* Left */
#left {
    display: flex;
    justify-content: space-between;
}
#left-logo-spin {
    margin: 10px 0 0 10px;
    width: 40px;
    height: 40px;
    padding: 8px 8px 8px 8px;
    cursor: hand;
}
#left-logo-spin:hover {
    background-color: rgba(255,255,255,0.3);
    border-radius: 50%;
}

/* Mid */
#mid-main-time {
    display: inline-flex;
    align-items: baseline;
    float: left;
    user-select: none;
    margin-top: -20vh - 85px;
    margin-bottom: -20vh;
}
#mid-main-time-draw {
    font-size: 18vh;
}
.mid-main-time-twelvehours {
    font-size: 3vh;
}
#mid-main-time-twelvehours-hidden {
    visibility: hidden;
}
#mid-main-greeting {
    font-size: 6vh;
    padding-top: -10vh;
}
#mid-main-username {
    width: 100%;
    padding: 10px;
}
input[type=text] {
    background-color: transparent;
    border: none;
    border-bottom: 1px solid #ccc;
    border-radius: 0;
    outline: none;
    height: 2.1rem;
    width: 100%;
    font-family: "Lato";
    color: #fff;
    text-align: center;
    text-shadow: 0px 0px 3px black;
    font-size: 2rem;
    box-shadow: none;
    -webkit-box-sizing: content-box;
    -moz-box-sizing: content-box;
    box-sizing: content-box;
    transition: all .3s;
}
input[type=text]:focus:not([readonly]) {
    border-bottom: 1px solid #4285F4;
    box-shadow: 0 1px 0 0 #4285F4;
}
input[type=text]:focus:not([readonly])+label {
    color: #4285F4;
}
#mid-main-username-input::-webkit-input-placeholder {
  color: #fff;
  opacity: 1;
}
#mid-main-username-input::-moz-placeholder {
  color: #fff;
  opacity: 1;
}
#mid-main-username-input:-ms-input-placeholder {
  color: #fff;
  opacity: 1;
}
#mid-main-username-input::placeholder {
  color: #fff;
  opacity: 1;
}
#mid-search {
    position: absolute;
    left: 78px;
    display: flex;
    justify-content: flex-start;
    margin: 10px 0 0 10px;
}
#mid-search-icon {
    width: 24px;
    height: 24px;
    padding: 8px 8px 8px 8px;
    cursor: hand;
}
#mid-search-icon:hover {
    background-color: rgba(255,255,255,0.3);
    border-radius: 50%;
}
#mid-search-box {
    display: none;
    margin: 6px 0 0 10px;
    font-size: 12px;
    height: 18px;
    text-align: left;
}

/* Right */
#left-settings {
    width: 15vw;
    align-self: flex-end;
    display: flex;
}
#left-settings-info {
    transition: all 2s ease;
    margin-top: 10px;
}
#left-settings-info:hover {
    transform:translate(0,-0.5em);
}
@keyframes fadeIn {
    0% {opacity: 0;}
    100% {opacity: 1;}
}
#left-settings-location {
    display:inline-block;
}
#left-settings-location:hover ~ #left-settings-owner {
    display: block;
    animation-name: fadeIn;
    animation-duration: 3s;
}
#left-settings-owner {
    display: none;
}
#left-settings-owner:hover {
    display: block;
    animation-name: fadeIn;
    animation-duration: 3s;
}
#right-todo {
    height: 40vh;
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    align-items: flex-end;
    width: 15vw;
}
#right-todo-icon {
    margin: 0 10px 0 0;
    height: 24px;
    width: 24px;
    padding: 8px 8px 8px 8px;
    cursor: hand;
    order: 2;
}
#right-todo-icon:hover {
    background-color: rgba(255,255,255,0.3);
    border-radius: 50%;
}
#mid-quote {
    width: 50vw;
    height: 170px;
    position: relative;
    overflow: hidden;
    align-self: center;
    margin-top: -130px;
}
#mid-quote-draw {
    font-size: 22px;
    text-align: center;
    position: absolute;
    bottom: -100px;
    left: 0;
    right: 0;
    transition: 1.5s;
    font-size: 2.5vh;
}
#mid-quote-draw-author {
    opacity: 0;
    transition-property: opacity;
    transition-duration: .5s;
    font-size: 2.5vh;
}
#mid-quote-draw-quote:hover ~ #mid-quote-draw-author {
    opacity: 1;
}
#mid-quote-draw-author:hover {
    opacity: 1;
}
#mid-main-focus {
    font-size: 4.1vh;
    padding: 2vh;
    display: inline-flex;
    text-align: center;
}
#mid-main-focus-value{
    font-size: 1.5rem;
    width: 50%;
}
#mid-main-focus-delete{
    padding-left:15px
}
#mid-main-focus-icon {
    padding: 5px;
    height: 30px;
    width: 30px;
    cursor: hand;
}
#mid-main-focus-icon:hover {
    background-color: rgba(255,255,255,0.3);
    border-radius: 50%;
}
input#my-focus {
    position: absolute;
    left: -9999px;
    visibility: hidden;
}
label {
    cursor: pointer;
}
input#my-focus+label:before {
    border: 1px solid #fff;
    content: "\00a0";
    display: inline-block;
    font: 20px/1em sans-serif;
    height: 20px;
    width: 20px;
    margin: 5px 0.5em 0 0px;
    padding: 0;
    vertical-align: baseline;
}
input#my-focus:checked+label:before {
    background: #fff;
    color: #333;
    content: "\2713";
    text-align: center;
}
input#my-focus:checked+label:after {
    font-weight: bold;
}
#left-settings-icon {
    height: 24px;
    width: 24px;
    padding: 8px 8px 8px 8px;
    cursor: hand;
    margin: 0 3px 0 10px;
}
#left-settings-icon:hover {
    background-color: rgba(255,255,255,0.3);
    border-radius: 50%;
}
.hideDivs {
    visibility: hidden;
    opacity: 0;
    transition-delay: 3.5s;
    transition-duration: 0.75s;
    transition-property: all;
    transition-timing-function: linear;
}
.unhideDivs {
    visibility: visible;
    transition-delay: 0.25s;
    transition-duration: 0.75s;
    transition-property: all;
    transition-timing-function: linear;
}
.unhideTodoDropup {
    display: block;
    height: 194px;
    width: 300px;
    background-color: rgba(0, 0, 9, 0.88);
    border-radius: 2px;
    margin: 0 10px 0 0;
    z-index: 1;
}
.hideTodoDropup {
    display: none;
}
#right-todo-arrow {
    margin: 0 23px 3px 0;
    height: 8px;
    width: 14px;
    display: none;
}
.todo-wrappers {
    margin: 0 0 0 8px;
}
.todo-checkboxes {
    display: inline;
}
.todos {
    font-size: 16;
    display: inline;
}
#right-todo {
    max-height: 75vh;
    height: 75vh;
}
#right-todo-dropup {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}
#right-todo-dropup-todo {
    max-width: 295px;
    margin: 5px 0 5px 0;
    overflow: hidden;
}
#right-todo-dropup-input {
    font-size: inherit;
    text-align: inherit;
    margin-left: 10px;
    width: 280px;
    height: 26px;
    font-size: 18;
}
p.todos span { /* Indent after line break */
    padding-left: 20px;
}
.todo-delete {
    height: 8px;
    width: 8px;
    padding: 0 0 .25px 5px;
    cursor: hand;
    margin-top: 2px;
}
.emoji {
    height: 32px;
    width: 32px;
    padding-left: 5px;
}
#right-todo-dropup-todo-notodo {
    text-align: center;
    padding-top: 15px;
    font-size: 16px;
}

